# Projet-Jarvis

./: .env.backup-20250820-164313  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AUDIT_COMPLET.md  AUDIT_COMPLET_100_POURCENT.md  AUDIT_COMPLET_2025.md  AUDIT_DOCUMENTATION_2025_10_25.md  AUDIT_RESUMÉ.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  COMMIT_CLEANUP.sh  CORRECTIONS_APPLIQUEES.md  CORRECTIONS_DOCS.md  DOCUMENTATION.md  FIXES_RAPIDES.md  French.txt  GUIDE_DEVELOPPEUR.md  Jai codé mon propre.txt  OLLAMA_INTEGRATION_AUDIT.md  PHASE_2_TEST_RESULTS.md  PHASE_3_TEST_RESULTS.md  POLYGLOT_VALIDATION_STATUS.md  PUSH_TO_GITHUB.md  Profil Jarvis Complet.md  RAPPORT_AUDIT_COMPLET_2025-10-26.md  README.md  README_V1.md  SECURITY_AUDIT_REPORT.md  SECURITY_RULES.md  SYSTEM_MAP.md  TEST_RESULTS.md  Text File (1).txt  Text File.txt  api-key  contracts.md  conversation.txt  (+12 more)
.claude/: RULES.md  settings.local.json
MCP/: INTEGRATION_GUIDE.md  integrate_with_backend.py  mcp_manager.py  test_brave_search.py  test_jarvis_web_capabilities.py  test_mcp_integration.py  test_multi_search_integration.py
ai_assistants/: CHATGPT.md  CLAUDE_INSTANCES.md  CLAUDE_UPDATES_ARCHIVE.md  README.md  audit.txt  ideememoirejarvis.txt  jarvis.txt
archive/: ChatInterface.js  README.md  SimpleInterface.js
backend/: Dockerfile  Dockerfile.scalable  __init__.py  app.py  config.py  database.py  main.py  requirements.txt  start_temp.py  test_db_monitoring.py  test_simple_monitoring.py
backend-audio/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
backend-audio-cpp/: CMakeLists.txt  Dockerfile  README.md
backend-audio-cpp/include/: audio_engine.h  audio_io.h
backend-audio-cpp/src/: audio_engine.cpp  audio_io.cpp
backend-audio-cpp/tests/: test_audio_engine.cpp
backend-audio/include/: audio_engine.hpp
backend-audio/src/: audio_engine.cpp  http_server.cpp
backend-lua-plugins/: Cargo.toml  README.md
backend-lua-plugins/src/: api.rs  error.rs  lib.rs  plugin_manager.rs  sandbox.rs
backend-pyo3-bridge/: Cargo.toml  Dockerfile  README.md  pyproject.toml
backend-pyo3-bridge/src/: lib.rs
backend-pyo3-bridge/tests/: test_bridge.py
backend-python-bridges/: Dockerfile  README.md  app.py  docker-compose.yml  embeddings_service.py  ollama_client.py  piper_client.py  rate_limiter.py  requirements.txt  test_phase2_rate_limiting.py  validators.py  whisper_client.py
backend-rust/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
backend-rust-audio/: Cargo.toml
backend-rust-db/: Cargo.toml  README.md
backend-rust-db/src/: cache.rs  database.rs  error.rs  lib.rs  models.rs  search.rs
backend-rust-mqtt/: Cargo.toml  README.md
backend-rust-mqtt/src/: automations.rs  error.rs  event_bus.rs  ha_client.rs  lib.rs  mqtt_client.rs
backend-rust/migrations/: 001_initial.sql
backend-rust/scripts/: start-dev.sh  start-prod.sh
backend-rust/src/: config.rs  main.rs  models.rs  websocket.rs
backend-rust/src/handlers/: chat.rs  health.rs  mod.rs  voice.rs
backend-rust/src/services/: chat.rs  database.rs  health.rs  llm.rs  memory.rs  mod.rs  voice.rs
certs/: openssl.cnf
clustering-elixir/: README.md  mix.exs
config/: qdrant_config.yaml
core/: .env.example  .gitignore  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  fetch-secrets.sh
core/examples/: init_admin.rs  test_new_modules.rs  test_redis_db_integration.rs
core/migrations/: 001_create_conversations.sql  002_create_users_table.sql
core/src/: lib.rs  main.rs  models.rs  openapi.rs
core/src/handlers/: agents.rs  auth.rs  chat.rs  health.rs  memory.rs  mod.rs  openai_compat.rs  stt.rs  tts.rs  web_search.rs
core/src/middleware/: auth.rs  error.rs  mod.rs  rate_limit.rs  secrets.rs  tls.rs  validation.rs
core/src/models/entities/: conversation.rs  message.rs  mod.rs
core/src/services/: audio_engine.rs  cache.rs  db.rs  gemini_client.rs  gemini_client.rs.orig  home_assistant_client.rs  intent_router.rs  memory_index.rs  mod.rs  ollama.rs  ollama_client.rs  python_bridges.rs  qdrant.rs  search.rs  stt_native.rs  tts_native.rs
core/tests/: test_handlers.rs  test_integration.rs  test_middleware.rs  test_models.rs  test_services.rs
devops-tools/: DEVOPS-STATUS.md  README.md  docker-compose-devops.yml  start-argocd.sh  start-devops.sh
docs/: ANALYSE_BUGS.md  API.md  API_EXAMPLES.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETION.md  ARCHITECTURE_DOCKER.md  ARCHITECTURE_SCALABLE_GUIDE.md  AUDIT_COMPLET_2025.md  AUDIT_COMPLET_DETAILLE_2025.md  AUDIT_COMPLET_JANVIER_2025.md  AUDIT_COMPLET_v1.9.0.md  AUDIT_ENTERPRISE_2025.md  AUDIT_EXHAUSTIF_FINAL_2025.md  AUDIT_FINAL.md  AUDIT_FINAL_v1.3.md  AUDIT_HARDCODED_VALUES.md  AUDIT_JARVIS_INSTANCE_13.md  AUDIT_REPORT.md  AUDIT_ULTRA_COMPLET_FINAL.md  BACKEND_RUST.md  (+46 more)
jarvis-secretsd/: COMPLETE_STATUS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.runtime  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN.md  INTEGRATION_REPORT.md  INTEGRATION_REPORT_FINAL.md  Makefile  PRODUCTION_REPORT.md  PRODUCTION_STATUS.md  PROJECT_DELIVERY.md  README.md  RELEASE_SUMMARY_v0.2.0.md  ROADMAP_v0.2.1.md  TEST_RESULTS.md  config.toml  jarvis-secretsd.service  policy.yaml
jarvis-secretsd/docs/: COMPLETE_STATUS.md  INTEGRATION_PLAN.md  INTEGRATION_REPORT.md  INTEGRATION_REPORT_FINAL.md  PRODUCTION_REPORT.md  PROJECT_DELIVERY.md  RELEASE_SUMMARY_v0.2.0.md  grafana-dashboard-secrets.json
jarvis-secretsd/jarvis-secrets-cli/: Cargo.toml
jarvis-secretsd/jarvis-secrets-cli/src/: main.rs
jarvis-secretsd/jarvis-secretsd/: Cargo.toml  Dockerfile  README.md  config.toml.example  jarvis-secretsd.service  policy.yaml.example
jarvis-secretsd/jarvis-secretsd/src/: api.rs  audit.rs  config.rs  crypto.rs  main.rs  metrics.rs  policy.rs  rotation.rs  storage.rs  types.rs
jarvis-secretsd/k8s/: deployment.yaml
jarvis-secretsd/run/: config.toml
jarvis-secretsd/scripts/: backup-vault.sh  migrate-env-secrets.sh
jarvis-secretsd/src/: api.rs  audit.rs  config.rs  crypto.rs  ids.rs  main.rs  policy.rs  rotation.rs  storage.rs  types.rs
(+477 files in other folders)
