[package]
name = "jarvis-pyo3-bridge"
version = "1.9.0"
edition = "2021"

[lib]
name = "jarvis_bridge"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Rust-Python FFI
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"

[profile.release]
opt-level = 3
lto = true
