[package]
name = "jarvis-mqtt-automations"
version = "1.5.0"
edition = "2021"

[dependencies]
# MQTT client stable
rumqttc = "0.24"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# JSON/serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config
dotenvy = "0.15"

# HTTP client (pour Home Assistant API)
reqwest = { version = "0.11", features = ["json"] }

# Async traits
async-trait = "0.1"

# Pattern matching
regex = "1.10"

# Time
tokio-util = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
