[package]
name = "jarvis-core"
version = "1.3.0"
edition = "2021"
authors = ["Enzo <enzo@jarvis-ai.local>"]
description = "Jarvis AI Assistant - High Performance Rust Backend"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"
num_cpus = "1.16"

# Web framework
axum = { version = "0.7", features = ["ws", "headers", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json", "stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Security
argon2 = "0.5"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
test-log = "0.2"
tokio-test = "0.4"

[build-dependencies]
vergen = { version = "8.0", features = ["build", "git", "gitcl"] }