[package]
name = "jarvis-core"
version = "1.9.0"
edition = "2021"

[[bin]]
name = "jarvis-core"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client for Python bridges
reqwest = { version = "0.11", features = ["json"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration
dotenv = "0.15"

# JWT Authentication
jsonwebtoken = "9"
once_cell = "1.19"

# Rate Limiting
parking_lot = "0.12"

# Input Validation
regex = "1"

# TLS/HTTPS Support
rustls = "0.21"
rustls-pemfile = "2.0"
tokio-rustls = "0.25"
