[package]
name = "jarvis-core"
version = "1.9.0"
edition = "2021"

[[bin]]
name = "jarvis-core"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal", "process"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# OpenAPI Documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Prometheus Metrics
axum-prometheus = "0.6"

# Internal modules
jarvis-audio = { path = "../backend-rust-audio" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "multipart"] }
urlencoding = "2.1"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "json", "macros", "migrate", "chrono"], default-features = false }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Full-text search
tantivy = "0.25"

# Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration
dotenvy = "0.15"

# JWT Authentication
jsonwebtoken = "9"
once_cell = "1.19"

# Password Hashing
bcrypt = "0.15"
rand = "0.8"

# Rate Limiting
parking_lot = "0.12"

# Input Validation
regex = "1"

# Base64 encoding/decoding for audio data
base64 = "0.22"

# Native AI Speech-to-Text
whisper-rs = "0.13"

# TLS/HTTPS Support
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2.0"
tokio-rustls = "0.26"

[dev-dependencies]
tempfile = "3.8"
