[package]
name = "jarvis-secrets"
version = "0.1.0"
edition = "2021"
authors = ["Jarvis Team"]
description = "CLI tool for managing jarvis-secretsd secrets"

[[bin]]
name = "jarvis-secrets"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tabled = "0.15"
chrono = "0.4"
